--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ ul {
 }
 
 .containerHero {
-  /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -30,8 +29,8 @@ ul {
 
 .containerImage {
   /* border: 1px solid pink; */
-  width: 100vw;
-  height: 100vw;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -62,18 +61,18 @@ img {
     margin: 0 auto;
     justify-content: space-between;
     align-items: center;
-  } 
+  }
 
   .containerImage {
     width: 30vw;
     height: 30vw;
   }
 
-  .containerHero h2{
+  .containerHero h2 {
     font-size: 48px;
   }
 
-  .containerHero .subtitle{
+  .containerHero .subtitle {
     font-size: 30px;
   }
 }
